# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sun-jdk-1.7.0.0_alpha85 (11 Mar 2010)

  11 Mar 2010; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha84.ebuild, +sun-jdk-1.7.0.0_alpha85.ebuild:
  Version Bump.

*sun-jdk-1.7.0.0_alpha84 (21 Feb 2010)

  21 Feb 2010; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha82.ebuild, +sun-jdk-1.7.0.0_alpha84.ebuild:
  Version Bump.

*sun-jdk-1.7.0.0_alpha82 (10 Feb 2010)

  10 Feb 2010; Vlastimil Babka <caster@gentoo.org>
  +sun-jdk-1.7.0.0_alpha82.ebuild:
  Version bump, remove 1.6 betas.

  31 Jan 2009, Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha78.ebuild, +sun-jdk-1.7.0.0_alpha81.ebuild:
  Version Bump

  19 Dec 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha77.ebuild, +sun-jdk-1.7.0.0_alpha78.ebuild:
  Version Bump.

  04 Dec 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha75.ebuild, -sun-jdk-1.7.0.0_alpha76.ebuild,
  +sun-jdk-1.7.0.0_alpha77.ebuild:
  Version Bump

  22 Nov 2009; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.18_beta3.ebuild, +sun-jdk-1.6.0.18_beta5.ebuild:
  Version bump.

  19 Nov 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha74.ebuild, +sun-jdk-1.7.0.0_alpha76.ebuild:
  Version bump.

  06 Nov 2009; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.18_beta2.ebuild, +sun-jdk-1.6.0.18_beta4.ebuild,
  -sun-jdk-1.7.0.0_alpha73.ebuild, +sun-jdk-1.7.0.0_alpha75.ebuild:
  Version bump.

  19 Oct 2009; Vlastimil Babka <caster@gentoo.org>
  sun-jdk-1.6.0.18_beta3.ebuild, sun-jdk-1.7.0.0_alpha74.ebuild:
  Fix check_license call and call java-vm-2_pkg_setup.

  19 Oct 2009; Vlastimil Babka <caster@gentoo.org>
  sun-jdk-1.6.0.18_beta2.ebuild, sun-jdk-1.6.0.18_beta3.ebuild,
  sun-jdk-1.7.0.0_alpha74.ebuild:
  Replace RESTRICT=fetch with ACCEPT_LICENSE stuff. Set it and forget it!
