@@ -1,8 +1,8 @@
 AUX fontconfig.Gentoo.properties 10932 RMD160 ce1fb555f3f5f281f328c8016e12407ac0893819 SHA1 59f68c06f4f727bc72449a76bd4941cbee626373 SHA256 893b469c87ba547122fe158941c00512bf3f15046251f4b8639d967203d32bc1
 AUX sun-jdk-1.6.env 940 RMD160 2061347f8137915ed421c7592a6909b51bb2110d SHA1 3520843a513f53f8a04782d9a6b373736c24f624 SHA256 f8669f72a512ca892dbe2f4b153ac39e92b6f4e33d3693e969d670134c5b15b8
 AUX sun-jdk-1.7.env 925 RMD160 f20078640a13176763381811e2050d0b9cd0ca1e SHA1 e2ef76e945eb3b4a34c4edfcf6376c58a54697b7 SHA256 95689b9bc21a9d571f556da0c6377c326bd2d24bc71f0b32f9bdc836c90cf581
-DIST jdk-7-ea-bin-b85-linux-i586-04_mar_2010.bin 89670057 RMD160 1516facfb3425ea52c015b81d8cf182dc1b67e8e SHA1 cba6e60e4efcf430c9600b52714b17f69c30bb77 SHA256 a752c0613fa442e92b95f6e71ee4f5a4a6a3d9e747fe2b8bdd7b8c1611c61f73
-DIST jdk-7-ea-bin-b85-linux-x64-04_mar_2010.bin 88995095 RMD160 7abd7e4ecb280c5f14fd7db0bfa5e1a8ba4fc02f SHA1 319ebe30fe575850ce95620cbaea617b06e39144 SHA256 d33e96549a0c6ec12dc205fa98be5ef9066ef50f01783a13cc49b989cc0a7cdf
-EBUILD sun-jdk-1.7.0.0_alpha85.ebuild 5247 RMD160 7d275cc0f06d1fa2ae14060b64812a5f5904f289 SHA1 beb28e662df48de05ea86ea93961683fd1ba3716 SHA256 df61884e6de81f3d13a86a46ee0c7dc542a579e3d4b32780afa33328b82dd22f
-MISC ChangeLog 17930 RMD160 442cf0a11f7da8b0af74d7d4286ce9276dc79f31 SHA1 b388c901dad13d443ff536651b7b5a599b574b8a SHA256 6d37b7d6c7a0733f23e324aa61a33bd4755b234c5ac7150bf79c94a607cdcbbe
+DIST jdk-7-ea-bin-b87-linux-i586-25_mar_2010.bin 89747244 RMD160 ab2b6125279588f97d2dafd4f1005e1ac39f01d9 SHA1 c1cfb7680f36b35e3bdd2dfcfd28e61c705d569e SHA256 903e695da1ce3ae2b0822171f426152526be95da265d6a9f96a3aa9c5eb08b14
+DIST jdk-7-ea-bin-b87-linux-x64-25_mar_2010.bin 89037939 RMD160 1c0e2f8a7377b2aec6e84e98312cb9f6c10e9a29 SHA1 78aeb9ace373f17227521a750b6ea82b02997ee6 SHA256 606c6ac7a36e701e24581d0f914a4bc99d933bc4487c209c5cbad69617cb0152
+EBUILD sun-jdk-1.7.0.0_alpha87.ebuild 5295 RMD160 3f9eda1e611517bb056336d30750e0f1072f0824 SHA1 46c870ede2d04ddd4e47c37f5f223ba373c28d54 SHA256 220eabe04098fbf4b0280ad47dfddbb6b2b01cd0a77f8a8121f3db5b2bea1dd2
+MISC ChangeLog 18123 RMD160 cf7a332ad5dd32e5fcf358a6509bf01c18a99f32 SHA1 b721374889d0d76186c5384880c9689ad0f0f578 SHA256 796ae45375b30f0568e4531ddff47a6b3ce5cd7e677c7773598da479465f0984
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
