@@ -8,7 +8,7 @@ MY_PV=${PV/_beta*/}
 MY_PVL=${MY_PV%.*}_${MY_PV##*.}
 MY_PVA=${MY_PV//./_}
 ALPHA=${PV#*_alpha}
-DATE="04_mar_2010"
+DATE="25_mar_2010"
 MY_RPV=${MY_PV%.*}
 
 BASE_URL="http://download.java.net/jdk7/binaries/"
@@ -89,7 +89,8 @@ src_unpack() {
 	else
 		die "unpack not found"
 	fi
-	"${S}"/bin/java -client -Xshare:dump
+	use x86 && "${S}"/bin/java -client -Xshare:dump
+	#We don't have a client VM on amd64
 }
 
 src_install() {
