@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sun-jdk-1.7.0.0_alpha87 (27 Mar 2010)
+
+  27 Mar 2010; <firari@gentoo.org> -sun-jdk-1.7.0.0_alpha85.ebuild,
+  +sun-jdk-1.7.0.0_alpha87.ebuild:
+  Version bump. Dump shared archive on x86 only.
+
 *sun-jdk-1.7.0.0_alpha85 (11 Mar 2010)
 
   11 Mar 2010; Fabian Fingerle <fabian@datensalat.eu>
